# nutrislice-cli

./: README.md  pyproject.toml
nutrislice_menu/: __init__.py  cli.py
