[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrislice-menu"
version = "1.0.0"
description = "CLI tool to fetch school lunch menus from any Nutrislice-powered district"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Brandon"}
]
keywords = ["nutrislice", "school", "lunch", "menu", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
lunch = "nutrislice_menu.cli:main"
menu = "nutrislice_menu.cli:main"

[tool.setuptools.packages.find]
where = ["."]
